updating gitignore for MMV files that can be created locally (idf files, replace excel)

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 bin/EnergyPlus*
 tmp/
 debug.py
-
+data/replace_mmv.xlsx
+data/archetype/USA/SFH_auto-MMV.idf
+data/archetype/USA/MFH_auto-MMV.idf
+data/archetype/USA/RT_auto-MMV.idf
 
 # OS stuff
 .DS_Store
