--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ data/replace_mmv.xlsx
 data/archetype/USA/SFH_auto-MMV.idf
 data/archetype/USA/MFH_auto-MMV.idf
 data/archetype/USA/RT_auto-MMV.idf
+# sharing Meteonorm epw files ppublically may be illegal
+data/climate/meteonorm*/**/*.epw
 
 # OS stuff
 .DS_Store
