--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@ bin/EnergyPlus*
 tmp/
 debug.py
 data/replace_mmv.xlsx
-data/archetype/USA/SFH_auto-MMV.idf
-data/archetype/USA/MFH_auto-MMV.idf
-data/archetype/USA/RT_auto-MMV.idf
+data/archetype/USA/*_auto-MMV.idf
 # sharing Meteonorm epw files publically may be illegal
 data/climate/meteonorm*/**/*.epw
 data/material_candidates.csv
